--- a/[Clustering]_Submission_Akhir_BMLP_Rismano_Baharuddin_Muhammad.ipynb
+++ b/[Clustering]_Submission_Akhir_BMLP_Rismano_Baharuddin_Muhammad.ipynb
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 483,
       "metadata": {
         "id": "BlmvjLY9M4Yj"
       },
@@ -87,167 +87,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "GHCGNTyrM5fS"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>536365</th>\n",
-              "      <th>85123A</th>\n",
-              "      <th>WHITE HANGING HEART T-LIGHT HOLDER</th>\n",
-              "      <th>6</th>\n",
-              "      <th>12/1/2010 8:26</th>\n",
-              "      <th>2.55</th>\n",
-              "      <th>17850</th>\n",
-              "      <th>United Kingdom</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>536365</td>\n",
-              "      <td>71053</td>\n",
-              "      <td>WHITE METAL LANTERN</td>\n",
-              "      <td>6</td>\n",
-              "      <td>12/1/2010 8:26</td>\n",
-              "      <td>3.39</td>\n",
-              "      <td>17850.0</td>\n",
-              "      <td>United Kingdom</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>536365</td>\n",
-              "      <td>84406B</td>\n",
-              "      <td>CREAM CUPID HEARTS COAT HANGER</td>\n",
-              "      <td>8</td>\n",
-              "      <td>12/1/2010 8:26</td>\n",
-              "      <td>2.75</td>\n",
-              "      <td>17850.0</td>\n",
-              "      <td>United Kingdom</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>536365</td>\n",
-              "      <td>84029G</td>\n",
-              "      <td>KNITTED UNION FLAG HOT WATER BOTTLE</td>\n",
-              "      <td>6</td>\n",
-              "      <td>12/1/2010 8:26</td>\n",
-              "      <td>3.39</td>\n",
-              "      <td>17850.0</td>\n",
-              "      <td>United Kingdom</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>536365</td>\n",
-              "      <td>84029E</td>\n",
-              "      <td>RED WOOLLY HOTTIE WHITE HEART.</td>\n",
-              "      <td>6</td>\n",
-              "      <td>12/1/2010 8:26</td>\n",
-              "      <td>3.39</td>\n",
-              "      <td>17850.0</td>\n",
-              "      <td>United Kingdom</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>536365</td>\n",
-              "      <td>22752</td>\n",
-              "      <td>SET 7 BABUSHKA NESTING BOXES</td>\n",
-              "      <td>2</td>\n",
-              "      <td>12/1/2010 8:26</td>\n",
-              "      <td>7.65</td>\n",
-              "      <td>17850.0</td>\n",
-              "      <td>United Kingdom</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "   536365  85123A   WHITE HANGING HEART T-LIGHT HOLDER  6  12/1/2010 8:26  \\\n",
-              "0  536365   71053                  WHITE METAL LANTERN  6  12/1/2010 8:26   \n",
-              "1  536365  84406B       CREAM CUPID HEARTS COAT HANGER  8  12/1/2010 8:26   \n",
-              "2  536365  84029G  KNITTED UNION FLAG HOT WATER BOTTLE  6  12/1/2010 8:26   \n",
-              "3  536365  84029E       RED WOOLLY HOTTIE WHITE HEART.  6  12/1/2010 8:26   \n",
-              "4  536365   22752         SET 7 BABUSHKA NESTING BOXES  2  12/1/2010 8:26   \n",
-              "\n",
-              "   2.55    17850  United Kingdom  \n",
-              "0  3.39  17850.0  United Kingdom  \n",
-              "1  2.75  17850.0  United Kingdom  \n",
-              "2  3.39  17850.0  United Kingdom  \n",
-              "3  3.39  17850.0  United Kingdom  \n",
-              "4  7.65  17850.0  United Kingdom  "
-            ]
-          },
-          "execution_count": 15,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Membaca dataset pelanggan mall dari URL dan menampilkan 5 baris pertama\n",
         "df = pd.read_csv(\"./data-clustering/data.csv\")\n",
         "df.head()"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 2498 entries, 0 to 2497\n",
-            "Data columns (total 8 columns):\n",
-            " #   Column                              Non-Null Count  Dtype  \n",
-            "---  ------                              --------------  -----  \n",
-            " 0   536365                              2498 non-null   object \n",
-            " 1   85123A                              2498 non-null   object \n",
-            " 2   WHITE HANGING HEART T-LIGHT HOLDER  2488 non-null   object \n",
-            " 3   6                                   2498 non-null   int64  \n",
-            " 4   12/1/2010 8:26                      2498 non-null   object \n",
-            " 5   2.55                                2498 non-null   float64\n",
-            " 6   17850                               1918 non-null   float64\n",
-            " 7   United Kingdom                      2498 non-null   object \n",
-            "dtypes: float64(2), int64(1), object(5)\n",
-            "memory usage: 156.3+ KB\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Menampilkan informasi tentang dataset, termasuk jumlah baris, kolom, tipe data, dan jumlah nilai non-null\n",
-        "df.info()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -279,12 +128,120 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 502,
       "metadata": {
         "id": "dKeejtvxM6X1"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 2499 entries, 0 to 2498\n",
+            "Data columns (total 8 columns):\n",
+            " #   Column       Non-Null Count  Dtype  \n",
+            "---  ------       --------------  -----  \n",
+            " 0   InvoiceNo    2499 non-null   object \n",
+            " 1   StockCode    2499 non-null   object \n",
+            " 2   Description  2499 non-null   object \n",
+            " 3   Quantity     2499 non-null   int64  \n",
+            " 4   InvoiceDate  2499 non-null   object \n",
+            " 5   UnitPrice    2499 non-null   float64\n",
+            " 6   CustomerID   2499 non-null   float64\n",
+            " 7   Country      2499 non-null   object \n",
+            "dtypes: float64(2), int64(1), object(5)\n",
+            "memory usage: 156.3+ KB\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Menampilkan informasi tentang dataset, termasuk jumlah baris, kolom, tipe data, dan jumlah nilai non-null\n",
+        "df.info()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "df.isna().sum()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.describe()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Mengelompokkan pendapatan tahunan pelanggan ke dalam kategori dan menghitung jumlah pelanggan di setiap kategori\n",
+        "ai0_30 = df[\"UnitPrice\"][(df[\"UnitPrice\"] >= 0.0) & (df[\"UnitPrice\"] <= 120.0)]\n",
+        "ai31_60 = df[\"UnitPrice\"][(df[\"UnitPrice\"] >= 121.0) & (df[\"UnitPrice\"] <= 240.0)]\n",
+        "ai61_90 = df[\"UnitPrice\"][(df[\"UnitPrice\"] >= 241.0) & (df[\"UnitPrice\"] <= 360.0)]\n",
+        "ai91_120 = df[\"UnitPrice\"][(df[\"UnitPrice\"] >= 361.0) & (df[\"UnitPrice\"] <= 480.0)]\n",
+        "ai121_150 = df[\"UnitPrice\"][(df[\"UnitPrice\"] >= 481.0) & (df[\"UnitPrice\"] <= 600.0)]\n",
+        " \n",
+        "# Menyusun data untuk plotting\n",
+        "# aix = [\"$ 0 - 50\", \"$ 50 - 100\", \"$ 100 - 200 \", \"$ 200 - 300\", \"$ 300 - 600\"]\n",
+        "aix = [\"$ 0 - 120\", \"$ 121 - 240\", \"$ 241 - 360\", \"$ 361 - 480\", \"$ 481 - 600\"]\n",
+        "aiy = [len(ai0_30.values), len(ai31_60.values), len(ai61_90.values), len(ai91_120.values), len(ai121_150.values)]\n",
+        " \n",
+        "# Membuat bar chart untuk distribusi pendapatan tahunan pelanggan\n",
+        "plt.figure(figsize=(15, 6))\n",
+        "plt.bar(aix, aiy, color=['red', 'green', 'blue', 'cyan', 'yellow'])\n",
+        "plt.title(\"Price per Unit\")\n",
+        "plt.xlabel(\"Price\")\n",
+        "plt.ylabel(\"Number of Customers\")\n",
+        "plt.xticks(rotation=45)  # Memutar label sumbu x agar lebih mudah dibaca\n",
+        " \n",
+        "# Menambahkan label jumlah pelanggan di atas setiap bar\n",
+        "for i in range(len(aix)):\n",
+        "  plt.text(i, aiy[i], aiy[i], ha='center', va='bottom')\n",
+        " \n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Mengelompokkan pendapatan tahunan pelanggan ke dalam kategori dan menghitung jumlah pelanggan di setiap kategori\n",
+        "ai0_30 = df[\"Quantity\"][(df[\"Quantity\"] >= 0) & (df[\"Quantity\"] <= 50)]\n",
+        "ai31_60 = df[\"Quantity\"][(df[\"Quantity\"] >= 51) & (df[\"Quantity\"] <= 100)]\n",
+        "ai61_90 = df[\"Quantity\"][(df[\"Quantity\"] >= 101) & (df[\"Quantity\"] <= 200)]\n",
+        "ai91_120 = df[\"Quantity\"][(df[\"Quantity\"] >= 201) & (df[\"Quantity\"] <= 300)]\n",
+        "ai121_150 = df[\"Quantity\"][(df[\"Quantity\"] >= 301) & (df[\"Quantity\"] <= 600)]\n",
+        " \n",
+        "# Menyusun data untuk plotting\n",
+        "aix = [\"0 - 120\", \"121 - 240\", \"241 - 360\", \"361 - 480\", \"481 - 600\"]\n",
+        "aiy = [len(ai0_30.values), len(ai31_60.values), len(ai61_90.values), len(ai91_120.values), len(ai121_150.values)]\n",
+        " \n",
+        "# Membuat bar chart untuk distribusi pendapatan tahunan pelanggan\n",
+        "plt.figure(figsize=(15, 6))\n",
+        "plt.bar(aix, aiy, color=['red', 'green', 'blue', 'cyan', 'yellow'])\n",
+        "plt.title(\"Customer and Their Quantity of Product\")\n",
+        "plt.xlabel(\"Product Quantity\")\n",
+        "plt.ylabel(\"Number of Customers\")\n",
+        "plt.xticks(rotation=45)  # Memutar label sumbu x agar lebih mudah dibaca\n",
+        " \n",
+        "# Menambahkan label jumlah pelanggan di atas setiap bar\n",
+        "for i in range(len(aix)):\n",
+        "  plt.text(i, aiy[i], aiy[i], ha='center', va='bottom')\n",
+        " \n",
+        "plt.show()"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -316,13 +273,102 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "WzBGjcbQM7N8"
       },
       "outputs": [],
       "source": [
-        "#Type your code here"
+        "df.Description.value_counts()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df['Description'].fillna(value=\"HAND WARMER SCOTTY DOG DESIGN\", inplace=True)\n",
+        "df.isna().sum()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df.CustomerID.value_counts()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 501,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\risma\\AppData\\Local\\Temp\\ipykernel_40752\\899959543.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+            "\n",
+            "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+            "\n",
+            "\n",
+            "  df['CustomerID'].fillna(value=17968.0, inplace=True)\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "InvoiceNo      0\n",
+              "StockCode      0\n",
+              "Description    0\n",
+              "Quantity       0\n",
+              "InvoiceDate    0\n",
+              "UnitPrice      0\n",
+              "CustomerID     0\n",
+              "Country        0\n",
+              "dtype: int64"
+            ]
+          },
+          "execution_count": 501,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df['CustomerID'].fillna(value=17968.0, inplace=True)\n",
+        "df.isna().sum()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df['Quantity'] = df['Quantity'].apply(lambda x: x if x >= 0 else 0)\n",
+        "df.describe()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 503,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Jumlah duplikasi:  44\n"
+          ]
+        }
+      ],
+      "source": [
+        "df.isna().sum()\n",
+        "print(\"Jumlah duplikasi: \", df.duplicated().sum())"
       ]
     },
     {
@@ -356,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 492,
       "metadata": {
         "id": "hgYvwWOzM93L"
       },
@@ -389,7 +435,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 493,
       "metadata": {
         "id": "yrPkK_bvM-Ya"
       },
@@ -418,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 494,
       "metadata": {
         "id": "Vbstha0PRUpI"
       },
@@ -450,7 +496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 495,
       "metadata": {
         "id": "lfOjVvfYM-4v"
       },
@@ -483,7 +529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 496,
       "metadata": {
         "id": "MFq0x-OzM_Wt"
       },
